# racing-pointsheet

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: Dockerfile
backend/pointsheet/: .env-example  .env.prod  README.md  alembic.ini  config.py  conftest.py  forza_cars_updated.csv  main.py  pyproject.toml
backend/pointsheet/api/: __init__.py  _utils.py  account.py  auth.py  events.py  series.py  utils.py  webhooks.py
backend/pointsheet/api/events/: __init__.py  cars.py  events.py  games.py  responses.py  series.py  tracks.py
backend/pointsheet/assets/: tailwind.config.js
backend/pointsheet/data/: forza_cars.csv  games.csv  tracks.csv
backend/pointsheet/event/domain/: entity.py  value_objects.py
backend/pointsheet/modules/: __init__.py  dependency_provider.py
backend/pointsheet/modules/account/: __init__.py  data_mappers.py  dependencies.py  events.py  handlers.py  repository.py  responses.py
backend/pointsheet/modules/auth/: __init__.py  auth.py  data_mapper.py  dependencies.py  domain.py  events.py  exceptions.py  repository.py  responses.py  value_objects.py
backend/pointsheet/modules/event/: __init__.py  data_mappers.py  dependencies.py  events.py  exceptions.py  repository.py  tasks.py
backend/pointsheet/modules/notification/: README.md  __init__.py  data_mappers.py  exceptions.py  formatters.py  handlers.py  models.py  notification_module.py  repository.py  services.py  webhook_cli.py
backend/pointsheet/pointsheet/: __init__.py  auth.py  celery.py  celery_worker.py  celeryconfig.py  config.py  db.py  exceptions.py  repository.py  seed_factories.py  storage.py
backend/pointsheet/pointsheet/alembic/: env.py
backend/pointsheet/pointsheet/api/: events.py
backend/pointsheet/pointsheet/domain/: __init__.py  entity.py  exceptions.py  mixins.py  responses.py  rules.py  types.py  value_objects.py
backend/pointsheet/pointsheet/factories/: account.py  event.py
backend/pointsheet/scripts/: scrape_forza_cars.py  update_csv.py
backend/pointsheet/static/: openapi.yml  style.css
backend/pointsheet/templates/: app.html  base.html  docs.html  index.html  spec.html
backend/pointsheet/tests/: conftest.py  test_auth.py  test_data_mappers.py  test_hello_world.py  test_repositories.py
backend/pointsheet/utils/: file_validation.py
backend/pointsheet/views/: __init__.py  auth.py  events.py  home.py
docs/: api.md  (+3 more)
(+244 files in other folders)
