[tool.poetry]
name = "pointsheet"
version = "0.1.0"
description = ""
authors = ["Ndifreke Ekott <ndy40.ekott@gmail.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "2.0.36"
flask = "3.1.0"
pydantic = "2.10.3"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.6.1"
typer = "^0.15.1"
lato = "^0.11.1"
lagom = "^2.7.5"
bcrypt = "^4.2.1"
flask-httpauth = "^4.8.0"


[tool.poetry.group.dev.dependencies]
alembic = "^1.14.0"
factory-boy = "^3.3.1"
pytest = "^8.3.4"
sqlalchemy-utils = "^0.41.2"
pytest-env = "^1.1.5"
jsonschema = "^4.23.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
    "tests"
]
env = [
    "DATABASE=sqlite://",
    "SECRET_KEY=testsecret",
    "AUTH_TOKEN_MAX_AGE=1"
]

[tool.isort]
profile = "hug"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
